# project-umbra

./: .gitattributes  .gitignore  LICENSE  README.md  USER_MANUAL.md  pyproject.toml  requirements.txt  run_umbra.py
conductor/: __init__.py  config.py  devices.py  kiosk.py  main.py  netutil.py  state.py
conductor/persistence/: __init__.py  store.py
conductor/routes/: __init__.py  api.py  dashboard.py  player.py
conductor/sync/: __init__.py  clock.py  messages.py  websocket.py
dashboard/: index.html
dashboard/css/: dashboard.css
dashboard/js/: connection.js  controls.js  dashboard.js
data/: config.json  config.local.example.json  presets.json
docs/: ARCHITECTURE.md
player/: index.html
player/css/: player.css
player/js/: clock.js  connection.js  perf.js  player.js  renderer.js  viewport.js
player/js/engines/: e1-point-field.js  e2-noise-field.js  e3-falling-column.js  e4-procedural-grid.js  e5-banded-field.js  e6-edge-mask.js  engine-base.js  noise.js
player/js/themes/: registry.js  theme-base.js
shared/js/: constants.js  protocol.js
tests/: test_devices.py  test_integration.py  test_state.py  test_sync.py
