[project]
name = "project-umbra"
version = "0.1.0"
description = "Distributed LAN-based ambient display system for movie-viewing environments"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "segno>=1.6.0",
    "screeninfo>=0.8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24"]

[project.scripts]
umbra = "conductor.main:start"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
